feat: implement DTO pattern with MapStruct for Book entity
- Add BookRequestDTO and BookResponseDTO as Java Records
- Add BookFormDTO for Thymeleaf form binding
- Create BookMapper interface with MapStruct
- Refactor BookController to use only DTOs
- Refactor BookUIController to use BookFormDTO
- Move relation resolution to BookService
- Change Book.genres from List to Set for ManyToMany
- Add V4 migration to reset PostgreSQL sequences
- Add @Transactional to create and update operations